src/css/style.css
/*
- Adding live server / cookies 
- CSS/js Organization
- Work on general colour palette
-	Button Design

*/
/*------------------------------------------------------------------------->
  Default Control and Roots 
<-------------------------------------------------------------------------*/

html {
  font-family: "Poppins", "Inter", Arial, sans-serif;
}
a {
  text-decoration: none;
  color: inherit;
}

ul {
	list-style-type: none;
}

input, button {
  all: unset;
}

/*
Needing to consider how to arrange and activate the different theme preferences

*/

:root {
  --app-bg-color: #80a0bf;
	--app-text-color: #fefefe;
	--app-primary-color: #234;
	--app-secondary-color: #357;
	--app-input-bg: #96acc2;
	--app-text-size: 1.4rem;
  --app-btn-color: #234;
  --app-border-rad: 6px;
	--app-section-width: 800px;
}

/*------------------------------------------------------------------------->
  Utility Classes
<-------------------------------------------------------------------------*/

.container {
  width: min(100% - 30px, 1200px);
  margin-inline: auto;
}

.flex {
  display: flex;
}

.f-col {
  flex-direction: column;
}

.hide {
	display: none;
}

.circle {
	border-radius: 50%;
}

.pointer {
	cursor: pointer;
}

/*------------------------------------------------------------------------->
  Base Structure
<-------------------------------------------------------------------------*/

body {
  background-color: var(--app-bg-color);
}

main {
  max-width: var(--app-section-width);
  align-items: center;
  justify-content: center;
}

/*------------------------------------------------------------------------->
  Text Styling
<-------------------------------------------------------------------------*/

h1 {
	font-family: "Ubuntu", sans-serif;	
  font-size: 2.5rem;	
	color: var(--app-text-color);			
}

h2 {
	font-size: 2rem;
  color: var(--app-text-color);
	text-align: center;

}

h3 {
	font-family: "Ubuntu", sans-serif;	
	font-size: 5rem;
	font-weight: 300;
	letter-spacing: -19px;


}

.logo { 
	width: 200px;
	align-items: center;
	justify-content: center;
	i {
		margin-left: -8px;
		font-size: 4rem;
		transform: rotate(35deg);
	}
}

.avatar-wrapper {
	width: 200px;
	height: 100px;
	
	img {
		height: 80px;
		width: 80px;
		margin: 10px 0;
	}
}

.and {
	justify-self: bottom;
	font-size: 1rem;
	margin-top: 40px;
	margin-left: 14px;
}

p {
	font-size: var(--app-text-size);
	color: var(--app-text-color);
}

.white {
	color: #fff;
}
/* Gotta change the title dude */
.blue {
	color: #924;
}

/*------------------------------------------------------------------------->
  Header	
<-------------------------------------------------------------------------*/

header {
	height: 100px;
	width: 100%;
	background-color: var(--app-primary-color);
	justify-content: space-between;
}

.banner {
	height: 100px;
	line-height: 100px;
	justify-content: space-between;
} 

/*------------------------------------------------------------------------->
  User Input
<-------------------------------------------------------------------------*/

.user-input {
  height: fit-content;
  width: 100%;
  border-radius: var(--app-border-rad);
  background-color: var(--app-bg-color);
	margin-top: 25px;
	z-index: 0;
}

.input-text {
  width: 100%;
  height: 200px;
  padding: 20px;
	outline: none;
	font-size: var(--app-text-size);
	color: var(--app-text-color);
  border-radius: var(--app-border-rad);
  background-color: var(--app-input-bg);
	border: 1px solid var(--app-post-color);
	resize: none;
  white-space: pre-wrap;
	overflow: hidden;
}

.btn-wrapper {
	margin-top: 25px;
  justify-content: space-between;
	align-items: center;
	position: relative;

	i {
		color: var(--app-btn-color);
		font-size: 1.6rem;									
		height: 40px;
		line-height: 40px;
	}
}

.input-display {
	color: var(--app-text-color);
}

.post-btn {
	font-size: 1.6rem;
	font-weight: 500;
  width: 120px;
  height: 50px;
  line-height: 35px;
  text-align: center;
  border-radius: var(--app-border-rad);
  background-color: var(--app-btn-color);
  color: var(--app-text-color);
}

.image-icon {
	width: 20px;
	height: auto;
	margin: 0 50px;
}

.input-display {
	position: absolute;
	bottom: -5px;
	left: 3px;
	font-size: 0.7rem;
}

input[type="file"] {
  display: none;
}  


.radio-group {
	width: 250px;
	display: flex;
	justify-content: space-between;
}

.radio-group input[type="radio"] {
  display: none; 
}

.radio-group label {
  color: var(--app-text-color);
  display: flex;
  align-items: center;
}

.mini-profile {
  width: 50px;
  height: 50px;
  display: flex;
  justify-content: center; 
  align-items: center; 
}

.one {
	background: var(--app-primary-color) url(../img/billy.png) no-repeat center center;
	background-size: cover;
}
.two {
	background: var(--app-primary-color) url(../img/greyson.png) no-repeat center center;
	background-size: cover;
}
.three {
	background: var(--app-primary-color) url(../img/eyegore.png) no-repeat center center;
	background-size: cover;
}

/*------------------------------------------------------------------------->
  Newsfeed
<-------------------------------------------------------------------------*/

.newsfeed {
	width: 100%;
  margin-top: 25px;
	z-index: 0;
}

.post-wrapper {
	width: 100%;
	height: fit-content;
  background-color: var(--app-secondary-color);
  padding: 25px;
  margin-bottom: 25px;
  border-radius: var(--app-border-rad);
}

.post-text{
	margin: 25px;
	font-size: var(--app-text-size);
	color: var(--app-text-color);
}

.post-image {
	width: 600px;
	height: auto;
	border-radius: var(--app-border-rad);
	margin: 15px 75px;
}

.heading-wrapper {
	display: flex;
	color: var(--app-text-color);

	img {
		height: 30px;
		width: 30px;
		border-radius: 50%;
	}
	span {
		font-size: var(--app-text-size);											
		line-height: 30px;
		margin: 0 5svw 0 10px; 
		height: 30px;
	}
	p {
		height: 30px;
		line-height: 30px;
		text-align: justify;
		margin-left: 5px;
		flex: 1;
		font-size: var(--app-text-size);									
	}
}

/*------------------------------------------------------------------------->
  Modal
<-------------------------------------------------------------------------*/

footer {
	justify-content: center;
	align-items: center;
}

.profile-modal {
	width: 450px;
	height: fit-content;
	background-color: var(--app-primary-color);
  padding: 20px;
	position: fixed;
	z-index: 800;
	margin: auto;
	padding: 20px;
	box-shadow: 2px 0 5px rgba(0, 0, 0, 0.5);
	transition: all 0.5s ease;

	label {
		font-size: var(--app-text-size);
		color: var(--app-text-color);
	}

	p {
		font-size: var(--app-text-size);
		color: var(--app-text-color);
	}

	img { 
		border-radius: 50%;
		height: 200px;
		width: 200px;
		margin: 5px auto;
	}
}



.profile-modal.slide {
	transform: translateY(-50svh); 
	opacity: 0;
	visibility: hidden;
}


.eye {
	font-size: 2.5rem;
	color: var(--app-text-color);
}

.username {
	text-align: center;
}

.social-icons {
	height: 50px;
	line-height: 50px;
}

.user-info {
  margin-top: 10px;
}

.info-item {
  margin-bottom: 15px;
}

label {
  font-weight: 600;
  color: var(--app-text-color);
}

ul li {
	color: var(--app-text-color);
	font-size: 1.2rem;
  padding-left: 1rem;
  position: relative;
}


.name {
	font-size: 1.5rem;
	margin: 0;
}

.username {
	font-size: 1rem;
	color: #bdc3c7;
	margin: 5px 0;
}


.email {
	color: var(--app-text-color);
	text-decoration: none;
	font-size: 1.2rem;
}

.email:hover {
	text-decoration: underline;
}

.followed-pages a:hover {
	text-decoration: underline;
}

